--- a/Course.css
+++ b/Course.css
@@ -1,17 +1,176 @@
 .course{
     width: 100%;
-    background-color: red;
+    /* background-color: red; */
     min-height: 100vh;
+    margin:4rem 0;
+}
+.course>h5{
+ color: var(--primary-bg-color);
+ text-align: center;
+ font-size: 1.1rem;
+}
+.course>h1{
+    text-align: center;
+    margin: 1rem 0;
+    font-size: 2.1rem;
 }
 .course-card{
     background-color: var(--card-bg-color);
-    width: 80%;
+    width: 90%;
     height: 50vh;
-    margin: 0 auto;
+    margin: 2rem auto;
     border-radius: 1rem;
+    position: relative;
+    overflow: hidden;
+    /* margin: 1rem 0; */
+}
+.course-card:hover{
+    color: var(--primary-bg-color);
+}
+.course-card:hover .price{
+    scale: 1.2;
 }
 .course-card>img{
     width: 100%;
     height: 75%;
     border-radius: 1rem;
 }
+.teacher-name {
+    color: var(--primary-bg-color);
+    padding: 7px;
+    font-size: 1.3rem;
+}
+.course-name{
+    padding-left: 7px;
+
+}
+.course-heading{
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    background-color: var(--card-bg-color);
+    color: blue;
+    padding: 0.5rem 1rem;
+    border-radius: 2rem;
+}
+.price{
+    background-color: var(--primary-bg-color);
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    align-items: last baseline;
+    padding: 2rem 1rem;
+    position: absolute;
+    top: -2rem;
+    right: -2rem;
+}
+
+/* ==================Record=========== */
+.records{
+    background-color: var(--primary-bg-color);
+    width: 95%;
+    height: 100vh;
+    border-top-right-radius: 15rem;
+    border-bottom-right-radius: 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    gap: 3rem;
+}
+.records h1{
+    font-size: 3rem;
+}
+/* =========================================== */
+/* ====================Teachers============= */
+.teacher-card{
+    background-color: var(--card-bg-color);
+    width: 90%;
+    margin: 7rem auto;
+    border-radius: 1rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    height: 18rem;
+}
+.teacher-card>img{
+    border-radius: 50%;
+    position: relative;
+    top: -6rem;
+}
+.teacher-card>div{
+    position: absolute;
+    bottom: 1.5rem;
+    text-align: center;
+
+}
+.teacher-card>div>p{
+    color: var(--primary-bg-color);
+    font-size: 1.2rem;
+}
+.icons{
+    height: 2rem;
+    font-size: 1.3rem;
+    color: white;
+    margin: 1rem 0;
+}
+.icons>a{
+    color: var(--primary-bg-color);
+    background-color: white;
+    border-radius: 50%;
+    margin: 0.3rem;
+    padding: 0.5rem;
+    cursor: pointer;
+}
+/* ============================================== */
+/* testimonials section start ===============*/
+.testimonial-blue{
+    background-color: var(--primary-bg-color);
+    color: white;
+    padding: 2rem;
+    font-size: 1.1rem;
+    line-height: 2.2rem;
+    border-radius: 1rem;
+    width: 95%;
+    font-family: math;
+    margin: 0 auto;
+}
+.testimonial-blue>div{
+    display: flex;
+    gap: 2rem;
+}
+.testimonial-blue>div>img{
+    border-radius: 50%;
+}
+.testimonial-teacher-details{
+    line-height: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.testimonial{
+    background-color: var(--card-bg-color);
+    width: 95%;
+    margin:2rem auto;
+    min-height: 50vh;
+}
+.testimonial-heading{
+    padding: 1rem;
+    color: var(--primary-bg-color);
+    font-family: sans-serif;
+    font-weight: 600;
+    font-size: 0.93rem;
+}
+.testimonial>h1{
+    padding: 1rem;
+    font-family: sans-serif;
+}
+.testimonial>p{
+    padding: 1rem;
+    font-size: 1.2rem;
+}
+/* ======================end============= */
