--- a/mobileResponsive.css
+++ b/mobileResponsive.css
@@ -180,7 +180,7 @@ body{
     border-radius: 50%;
     position: absolute;
     top: -3rem;
-    right: -3rem;
+    right: -1rem;
     width:45%;
     height: 40%;
     display: flex;
@@ -239,6 +239,8 @@ body{
     background-color: #f2f2f5d5;
     padding: 2rem 1rem;
     margin-top: 3rem;
+    width: 95%;
+    margin: 2rem auto
 }
 .about-us>h5{
     color: blue;
@@ -258,4 +260,3 @@ body{
 }
 
 /* ===========About section end========== */
-
